<resources>
    <string name="app_name">JC CloudApp</string>
    <string name="subtitle">现场记录APP</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_title">Menu Title</string>
    <string name="page">Page</string>
    <string name="tab">Tab</string>
    <string name="search">Search</string>
    <string name="projects">我的项目列表</string>
    <string name="exit">退出</string>
    <string name="menu1">Tab Count 1</string>
    <string name="menu2">Tab Count 2</string>
    <string name="menu3">Tab Count 3</string>
    <string name="menu4">Tab Count 4</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="add">添加</string>
    <string name="del">删除</string>
    <string name="save">保存</string>
    <string name="update">上报</string>

</resources>
