<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:checked="true"
            android:icon="@drawable/ic_arrow"
            android:title="@string/menu1"/>
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/ic_arrow"
            android:title="@string/menu2"/>
        <item
            android:id="@+id/navigation_item_3"
            android:icon="@drawable/ic_arrow"
            android:title="@string/menu3"/>
        <item
            android:id="@+id/navigation_item_4"
            android:icon="@drawable/ic_arrow"
            android:title="@string/menu4"/>
    </group>
    <item android:title="Sub items">
        <menu>
            <item
                android:checkable="true"
                android:icon="@drawable/ic_arrow"
                android:title="Sub item 1"/>
            <item
                android:checkable="true"
                android:icon="@drawable/ic_arrow"
                android:title="Sub item 2"/>
            <item
                android:checkable="true"
                android:icon="@drawable/ic_arrow"
                android:title="Sub item 3"/>
            <item
                android:checkable="true"
                android:icon="@drawable/ic_arrow"
                android:title="Sub item 4"/>
            <item
                android:checkable="true"
                android:icon="@drawable/ic_arrow"
                android:title="Sub item 5"/>
            <item
                android:checkable="true"
                android:icon="@drawable/ic_arrow"
                android:title="Sub item 6"/>
        </menu>
    </item>
</menu>